--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,16 +7,17 @@ ul {
 .title {
      margin: 0;
      position: relative;
-     font-size: 8vh;
-     top: 1.8vh;
+     font-size: 4vw;
+     top: 0.5vw;
 }
+
 li {
     padding: 0;
     margin: 0 5px;
     list-style: none;
     position: relative;
-    font-size: 3.5vh;
-    top: 3vh;
+    font-size: 2vh;
+    top: 1.5vh;
 }
 
 .avatar {
