--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   position: relative;
   flex-direction: column;
   width: 1300px;
-  margin: 0 auto;
+  margin: 0 2vw;
   top: 8vw;
   z-index: ;
 }
