made table more responsive

--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  width: 1300px;
-  margin: 0 2vw;
+  width: 95vw;
+  margin: 0 auto;
   top: 8vw;
   z-index: ;
 }
@@ -43,12 +43,9 @@ td {
   text-align: left;
   border-left: 1px dotted rgb(161, 161, 161);
   border-bottom: 1px solid rgba(185, 184, 184, 0.747);
+  padding: 0;
 }
 
-.buttons {
-  border-left: 1px dotted rgba(161, 161, 161, 0);
-  border-bottom: 1px solid rgba(185, 184, 184, 0);
-}
 
 @media screen (max-width: 1000px){
   .ContactBook {
@@ -68,4 +65,8 @@ td {
 
 .form-control {
   font-size: 1vw;
+}
+
+.table {
+  padding: 1px;
 }
